[package]
name = "replace-await"
version = "0.1.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/replace-await"
publish = false

[workspace]

[dependencies]
anyhow = "1"

[target.'cfg(windows)'.dependencies]
wild = "2"
